# westminster_cli

./: .gitignore  LICENSE  README.md  pyproject.toml  westminster
scripts/: add_mesv.py  add_scripture_proofs.py  build_opc_corpus.py
src/westminster_cli/: __init__.py  cli.py  corpus.py  formatting.py
src/westminster_cli/data/: __init__.py  standards.json
tests/: test_cli.py  test_corpus.py  test_formatting.py
